CRUD Artwork, ArtCategory, Exhibition, Payment, Status

--- a/eProject/OnlineArtGallery/OnlineArtGallery/appsettings.json
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConnection": "Data Source=DESKTOP-RJT9OM1\\DUCLE;Initial Catalog=ArtGallery;Integrated Security=True"
+  }
 }
